# FrameLog-rs

./: Cargo.toml  LICENSE  Readme.md  Templates.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: bugfix.md  docs.md  feature.md
.github/workflows/: ci.yml
src/: buf_logger.rs  buffer.rs  filehandler.rs  lib.rs  logger.rs  main.rs
